manifests/services/namespaces/homeassistant/00-ha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
  labels:
    environment: extern
    app: homeassistant
spec:
  selector:
    app: homeassistant
  type: ClusterIP
  ports:
    - targetPort: 8123
      port: 8123
      name: websecure
