manifests/services/namespaces/homeassistant/00-ha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  labels:
    environment: internal
    app: homeassistant
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
    hajimari.io/enable: "true"
    hajimari.io/icon: "home"
spec:
  tls:
    - hosts:
        - myhome.domain.tld
  rules:
    - host: myhome.domain.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant-service
                port:
                  number: 8123
